[metadata]
name = causality_lab
version = 0.0.0
author = Intel Labs
description = Research code of novel causal discovery algorithms developed at Intel Labs.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/IntelLabs/causality-lab
keywords = AI, ML, causality
classifiers =
    'License :: OSI Approved :: MIT License'
    'Programming Language :: Python'
    'Programming Language :: Python :: 3'
    'Programming Language :: Python :: 3.7'
    'Programming Language :: Python :: 3.8'
    'Programming Language :: Python :: 3.9'
    'Programming Language :: Python :: 3.10'
    'Programming Language :: Python :: Implementation :: CPython'
    'Programming Language :: Python :: Implementation :: PyPy'

[options]
packages = find:
python_requires = >=3.7
install_requires = file: requirements.txt

[options.packages.find]
exclude =
    unit_tests
    imgs
    notebooks
    example_data
